# AIMoS-PoC

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  ChatPanel.jsx  DistributionPanel.jsx  index.css  lib.js
src/dip_poc/: agent.py  agent_core.py  cli.py  config.py  services.py
src/dip_poc/api/: client.py  models.py
src/dip_poc/core/: aggregation.py
src/dip_poc/llm/: formatter.py
src/dip_poc/mcp/: server.py
src/dip_poc/observability/: __init__.py  audit.py  logging_setup.py  validation.py
src/dip_poc/web/: app.py  run.py
tests/: test_aggregation.py  test_client.py  test_observability.py
tests/fixtures/: persons_wp20.json
